--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,11 @@ concurrency:
 
 env:
   VITE_API_KEY: ${{secrets.VITE_API_KEY}}
+  VITE_AUTH_DOMAIN: ${{secrets.VITE_AUTH_DOMAIN}}
+  VITE_PROJECT_ID: ${{secrets.VITE_PROJECT_ID}}
+  VITE_STORAGE_BUCKET: ${{secrets.VITE_STORAGE_BUCKET}}
+  VITE_MESSAGE_SENDER_ID: ${{secrets.VITE_MESSAGE_SENDER_ID}}
+  VITE_APP_ID: ${{secrets.VITE_APP_ID}}
 
 jobs:
   # Single deploy job since we're just deploying
