--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "firebase": "^10.11.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "universal-cookie": "^7.1.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
